infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
      - name: auth-mongo
        image: mongo
        resources:
          requests:
            memory: "250Mi"
            cpu: "250m"
          limits:
            memory: "500Mi"
            cpu: "500m"
        volumeMounts:
        - name: auth-mongo-storage
          mountPath: /data/db
      volumes:
      - name: auth-mongo-storage
        persistentVolumeClaim:
          claimName: auth-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
spec:
  selector:
    app: auth-mongo
  ports:
  - name: auth-mongo-db
    protocol: TCP
    port: 27017
    targetPort: 27017
