infra/k8s/author-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: author-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: author
  template:
    metadata:
      labels:
        app: author
    spec:
      containers:
      - name: author
        image: sreekanthlakka/author
        volumeMounts:
        - name: nfs-storage
          mountPath: "/mnt/shared"
      volumes:
      - name: nfs-storage
        persistentVolumeClaim:
          claimName: nfs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: author-srv
spec:
  selector:
    app: author
  ports:
  - name: author
    protocol: TCP
    port: 3000
    targetPort: 3000
