infra/k8s/author-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: author-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: author-mongo
  template:
    metadata:
      labels:
        app: author-mongo
    spec:
      containers:
      - name: author-mongo
        image: mongo:5.0
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "250m"
            memory: "512Mi"
        volumeMounts:
        - name: author-mongo-storage
          mountPath: /data/db
      volumes:
      - name: author-mongo-storage
        persistentVolumeClaim:
          claimName: author-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: author-mongo-srv
spec:
  selector:
    app: author-mongo
  ports:
  - name: author-mongo-db
    protocol: TCP
    port: 27017
    targetPort: 27017
