infra/k8s/comments-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments-mongo
  template:
    metadata:
      labels:
        app: comments-mongo
    spec:
      containers:
      - name: comments-mongo
        image: mongo:5.0
        volumeMounts:
        - name: comments-mongo-storage
          mountPath: /data/db
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
      volumes:
      - name: comments-mongo-storage
        persistentVolumeClaim:
          claimName: comments-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: comments-mongo-srv
spec:
  selector:
    app: comments-mongo
  ports:
  - name: comments-mongo-db
    protocol: TCP
    port: 27017
    targetPort: 27017
