infra/k8s/executionEngine-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: execution-engine-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: execution-engine
  template:
    metadata:
      labels:
        app: execution-engine
    spec:
      serviceAccountName: sree-service-account
      containers:
      - name: execution-engine
        image: sreekanthlakka/execution-engine
        resources:
          requests:
            memory: "500Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: execution-engine-srv
spec:
  selector:
    app: execution-engine
  ports:
  - name: execution-engine
    protocol: TCP
    port: 3000
    targetPort: 3000
