infra/k8s/likes-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: likes-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: likes
  template:
    metadata:
      labels:
        app: likes
    spec:
      containers:
      - name: likes
        image: sreekanthlakka/likes
---
apiVersion: v1
kind: Service
metadata:
  name: likes-srv
spec:
  selector:
    app: likes
  ports:
  - name: likes
    protocol: TCP
    port: 3000
    targetPort: 3000
