infra/k8s/likes-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: likes-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: likes-mongo
  template:
    metadata:
      labels:
        app: likes-mongo
    spec:
      containers:
      - name: likes-mongo
        image: mongo:5.0
        volumeMounts:
        - name: likes-mongo-storage
          mountPath: /data/db
      volumes:
      - name: likes-mongo-storage
        persistentVolumeClaim:
          claimName: likes-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: likes-mongo-srv
spec:
  selector:
    app: likes-mongo
  ports:
  - name: likes-mongo-db
    protocol: TCP
    port: 27017
    targetPort: 27017
