infra/k8s/main-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
      - name: main
        image: sreekanthlakka/main
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 300m
            memory: 512Mi
        volumeMounts:
        - name: nfs-storage
          mountPath: "/mnt/nfs_shared"
      volumes:
      - name: nfs-storage
        persistentVolumeClaim:
          claimName: nfs-pvc2

---
apiVersion: v1
kind: Service
metadata:
  name: main-srv
spec:
  selector:
    app: main
  ports:
  - name: main
    protocol: TCP
    port: 3000
    targetPort: 3000
