infra/k8s/notification-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
      - name: notification
        image: sreekanthlakka/notification
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "250m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: notification-srv
spec:
  selector:
    app: notification
  ports:
  - name: notification
    protocol: TCP
    port: 3000
    targetPort: 3000
