infra/k8s/socket-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socket-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: socket
  template:
    metadata:
      labels:
        app: socket
    spec:
      containers:
      - name: socket
        image: sreekanthlakka/socket
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "250m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: socket-srv
spec:
  selector:
    app: socket
  ports:
  - name: socket
    protocol: TCP
    port: 3000
    targetPort: 3000
